--- a/Kconfig
+++ b/Kconfig
@@ -121,6 +121,12 @@ config MIPI_DCS_ADDRESS_MODE_BGR
     default 0x00 if !MIPI_DCS_ADDRESS_MODE_BGR_SELECTED
     default 0x08 if MIPI_DCS_ADDRESS_MODE_BGR_SELECTED
 
+config HAGL_TRANSPARENT_CHAR_BACKGROUND
+    bool "Draw char's background based on surface's pixel"
+    default y
+    help
+        Draw char's background based on surface's pixel
+
 config MIPI_DISPLAY_SPI_CLOCK_SPEED_HZ
     int "SPI clock speed in Hz"
     default 40000000
